infra-k8s/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 4d4d07ee1327e609fefacfad48167d64fa03f1bc
    app.quarkus.io/build-timestamp: 2021-11-12 - 22:19:33 +0000
  labels:
    ui: pinklady
    app.kubernetes.io/name: rest-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: rest-service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-service
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 4d4d07ee1327e609fefacfad48167d64fa03f1bc
        app.quarkus.io/build-timestamp: 2021-11-12 - 22:19:33 +0000
      labels:
        ui: pinklady
        app.kubernetes.io/name: rest-service
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: docker.io/amunozhe/rest-service:2.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: rest-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
