infra-k8s/kubernetes-backup.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 4d4d07ee1327e609fefacfad48167d64fa03f1bc
    app.quarkus.io/build-timestamp: 2021-11-12 - 22:19:33 +0000
    labels:
      app.kubernetes.io/name: rest-service
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
    ui: skyblue
  name: rest-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: rest-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 4d4d07ee1327e609fefacfad48167d64fa03f1bc
    app.quarkus.io/build-timestamp: 2021-11-12 - 22:19:33 +0000
  labels:
    ui: skyblue
    app.kubernetes.io/name: rest-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: rest-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-service
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 4d4d07ee1327e609fefacfad48167d64fa03f1bc
        app.quarkus.io/build-timestamp: 2021-11-12 - 22:19:33 +0000
      labels:
        ui: skyblue
        app.kubernetes.io/name: rest-service
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: docker.io/amunozhe/rest-service:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: rest-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 4d4d07ee1327e609fefacfad48167d64fa03f1bc
    app.quarkus.io/build-timestamp: 2021-11-12 - 22:19:33 +0000
  labels:
    app.kubernetes.io/name: rest-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    ui: skyblue
  name: rest-service
spec:
  rules:
    - host: rest-service-1.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: rest-service
                port:
                  name: http
            path: /
            pathType: Prefix
